--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
   </head>
   <body>
     <div class="container">
-      <h2>Kelompok 3</h2>
+      <h2>Kelompok 2</h2>
       <center>
         <div class="card">
           <img src="img/vicky.png" alt="John" style="width: 100%" />
-          <h1>Rasmi</h1>
+          <h1>Vicky Hermawan</h1>
           <p class="title">Student</p>
-          <p style="margin-bottom: 1.5rem">PENS</p>
+          <p style="margin-bottom: 1.5rem">SMK Negeri 5 Surabaya</p>
           <a href="#"><i class="fa fa-dribbble"></i></a>
           <a href="#"><i class="fa fa-twitter"></i></a>
           <a href="#"><i class="fa fa-linkedin"></i></a>
           <a href="#"><i class="fa fa-facebook"></i></a>
-          <a href="https://engineer1503.github.io./"
+          <a href="http://vcynanon2000.github.io"
             ><p><button>Web Portofolio</button></p></a
           >
         </div>
         <div class="card">
           <img src="img/ikhsan.png" alt="John" style="width: 100%" />
-          <h1>Agnes Claudia</h1>
+          <h1>Muhammad Nur Ikshan</h1>
           <p class="title">Student</p>
           <p style="margin-bottom: 1.5rem">SMK Negeri Jawa Tengah</p>
           <a href="#"><i class="fa fa-dribbble"></i></a>
@@ -40,20 +40,7 @@
         </div>
         <div class="card">
           <img src="img/anifa.png" alt="John" style="width: 100%" />
-          <h1>Ananda Shofia Na'am</h1>
-          <p class="title">Student</p>
-          <p style="margin-bottom: 1.5rem">SMK Negeri 7 Semarang</p>
-          <a href="#"><i class="fa fa-dribbble"></i></a>
-          <a href="#"><i class="fa fa-twitter"></i></a>
-          <a href="#"><i class="fa fa-linkedin"></i></a>
-          <a href="#"><i class="fa fa-facebook"></i></a>
-          <a href="http://anifaaulia.github.io"
-            ><p><button>Web Portofolio</button></p></a
-          >
-        </div>
-        <div class="card">
-          <img src="img/anifa.png" alt="John" style="width: 100%" />
-          <h1>Jaya Raharja</h1>
+          <h1>Anifa Aulia Abdari</h1>
           <p class="title">Student</p>
           <p style="margin-bottom: 1.5rem">SMK Negeri 7 Semarang</p>
           <a href="#"><i class="fa fa-dribbble"></i></a>
